--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,9 +3,11 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterVitepress = "4710194d-e776-4893-9690-8d956a29c365"
-Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 SankeyMakie = "1323c716-dab9-4207-0457-9cc5295a221b"
+
+[compat]
+DocumenterVitepress = "0.2"
 
 [sources]
 SankeyMakie = {path = ".."}
