--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SankeyMakie"
 uuid = "1323c716-dab9-4207-0457-9cc5295a221b"
 authors = ["Julius Krumbiegel"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
@@ -15,7 +15,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Compat = "4.16.0"
 Graphs = "1.5"
 LayeredLayouts = "0.2.4"
-Makie = "0.21, 0.22"
+Makie = "0.21, 0.22, 0.23"
 MetaGraphs = "0.7, 0.8"
 julia = "1.10"
 
